root/testfiles/static/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@375&display=swap');



body {
    font-family: "Comfortaa", sans-serif;
    font-optical-sizing: auto;
    font-weight: 375;
    font-style: normal;
    width: 100%;
    color: #222222;
    background-color: #f0f8ff;
    text-decoration: none;
    position: relative;

}

#profile-body {
        background-color: #ecf0f3;
        display: flex;
        position: relative;
        width: 100%;
flex-wrap: wrap;
}

button:focus {
    outline: none;
} 

.custom-nav-items ul {
    display: flex;
    gap: 17px;
    align-items: center;
    height: 100%;
    margin: 0;
    font-size: large;
}

li, li:hover{
    list-style-type: none;
}


li a {
    text-decoration: none;
    color: #d6dde3;
}

li a:hover {
    text-decoration: none;
    color: #ffffff;
    scale: 1.2;
}

@media (min-width: 768px) {
.col-md-4 {
    -ms-flex: 0 0 33.333333%;
    flex: 0 0 33.333333%;
    max-width: 33.333333%;
}
}

.col-md-4 {
    position: relative;
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
}



.signup-body {
    background-color: #ecf0f3;
}


.flex {
    display: flex;
}

nav {
    background-color: rgba(63, 63, 63, 0.518);
    backdrop-filter: blur(15px) brightness(75%) saturate(70%);
    border-radius: 0px 0px 3px 3px;
    height: 60px;
    box-shadow: 0px 15px 10px -5px rgba(0,0,0,0.1);
    background: linear-gradient(90deg, rgba(0, 0, 0, 0.641) 0%, rgba(70, 70, 70, 0.141) 100%), rgba(78, 78, 78, 0.822);
    padding: 0px 20px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 1000;
}


/* .navbar-toggler-icon {
    background-color: #f5f5f5;
    opacity: 0.8;

} */

.bgg-yellow {
    background-color: #ffd700;
}


.added {
    border-radius: 0px 0px 3px 7px;

}

.nav-margin-top {
    margin-top: 90px;
}


.navbar-brand {
    color: #f5f5f5;
    font-weight:900;
    font-size: 1.8rem;
    letter-spacing: 1px;
}



.navbar-brand:hover {
    color: #cbac00;

}

.navbar-nav .nav-item .nav-link {
    /* color: #fff; */
    position: relative;
    transition: 0.3s;
    transform: translateX(0);
    margin-right: 10px;
    color: rgb(255, 255, 255);
    

}

.navbar-nav .nav-item .nav-link:hover {
    transform: translateX(10px);
    /* Hover effect with a transform */
}

.account {
    position: relative;
    transition: 0.3s;
    transform: translateX(0);
    margin-right: 10px;
    color: rgb(255, 255, 255);
    padding: 10px 5px;
}

.account:hover {
    transform: scale(1.1);
    transition: 0.3s;
    transform: translateX(0px);
}

.navbar-nav .nav-item .nav-link::before {
    content: '';
    position: absolute;
    width: 0%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: aliceblue;
    transition: 0.3s;
}

.navbar-nav .nav-item .nav-link:hover::before {
    width: 100%;
}

#login {
    border-radius: 9px;
}


main {
    margin-top: 80px;
}

.main {
    height: 320px;


}

.my_row {
    display: flex;
    gap: 10px;
}

.background {
    background: linear-gradient(90deg, rgba(0,0,0,0.5075280112044818) 0%, rgba(16, 16, 16, 0.332) 100%), url(../images/deggendorf.jpg);
    border-radius: 8px;
    width: calc(100% - 320px);
    /* box-shadow: 11.41px 11.41px 16px #DAE2E8, -11.41px -11.41px 16px #FFFFFF; */
    position: relative;
}

.background img {
    position: absolute;
    aspect-ratio: 16/9;
    width: 580px;
    /* height: 300px; */
    border-radius: 10px;
    bottom: 0;
    right: 0;
    filter: brightness(0.9);
}

#explain, .display-5 {
    margin-left: 20px;
}

#explain span{
    border-radius: 10px;
    padding: 3px 7px;


}

.background img{
    object-fit:scale-down;
    position: absolute;
    bottom: 0;
    right: 0;
}

#weather {
    /* min-width: 300; */
    height: 320px;
    width: 320px;
    background-color: rgb(135, 197, 250);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    float: right;
    background: linear-gradient(50deg, rgba(0,0,0,0.5075280112044818) 0%, rgba(70, 70, 70, 0.141) 100%), #87c5fa;

}

#weather-icon{
    height: 200px;
    width: 200px;
    margin-left: auto;
    transform: translateY(-10px);
}


.first_section {
    margin-top: 10px;
    margin-left: 30px;
}

.first_section > h1:first-child {
    font-size: 1.5rem;
    font-weight: 700;
    margin: 10px auto ;
}

.first_section > div {
    color: rgb(55, 55, 55);
}



.middle_section {
    display: flex;
    align-items: center;
    justify-self: center;
    transform: translateY(-30px);

}


.middle_section > div:first-child  {
    margin-left: 20px;
    font-size: 4rem;
    font-weight: 300;
    position: relative;
}


.middle_section > div:first-child::after {
    content: '°c';
    top: -8px;
    right: -37px;
    font-size: 2rem;
    position: absolute;
}


/* .middle-section img {

} */



.end_section {
    display: flex;
    justify-content: space-around;
    margin-bottom: 30px;
    align-items: center;
    transform: translateY(-50px);
    font-weight: 900;

}

.end_section .max {
    color: rgb(249, 117, 117);
    text-shadow: 3px 4px 19px rgba(0,0,0,1);
}

.end_section .min {
    color: rgb(122, 122, 251);
    text-shadow: 3px 4px 19px rgba(0,0,0,1);
}

.end_section > div:nth-child(2) {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 20px;
}

.end_section > div:nth-child(1) {

    
    display: flex;
    flex-direction: column;
    align-items: space-between;


}

.end_section > div:nth-child(3)  {
    display: flex;
    flex-direction: column;
    align-items: center;
}


#windsock {
    width: 40px;
    height: 40px;
}

#humidity {
    width: 50px;
    height: 50px;
}   
/* ... */

